--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.0.0",
+    "emotion": "11.0.0",
     "node-sass": "6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
